# Kino

./: .gitignore  CMakeLists.txt
shaders/: RectUI.hlsl  basic2d.hlsl  chunk.hlsl
src/: CMakeLists.txt  allocator.cpp  allocator.h  array.h  base_commands.cpp  base_commands.h  base_types.h  buffer.cpp  buffer.h  camera.cpp  camera.h  enum_flags.hpp  font.cpp  font.h  key_code.h  keymap.cpp  keymap.h  keytest.cpp  kino.cpp  kino.h  main.cpp  math.cpp  math.h  matrix.h  os.h  os_win32.cpp  os_win32.h  profiler.cpp  profiler.h  render.cpp  render.h  shader.cpp  shader.h  string.cpp  string.h  texture.cpp  texture.h  transform.h  ui.cpp  ui.h  (+6 more)
